html terminados. estilizando

--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
       <div class="col">
         <div class="card h-100">
-          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" class="card-img-top" alt="Skyscrapers" />
-
+          <img src="./images/Cinema.jpg" class="card-img-top" alt="Cinema" />
           <div class="card-body">
             <h5 class="card-title">Título</h5>
             <p class="card-text"> Texto descriptivo. </p>
@@ -93,14 +92,14 @@
 
           <div class="card-footer">
             <small class="text-muted">Price $0000</small>
-            <button href="event.html" class="btn-vermas">Ver más</button>
+            <a href="event.html" class="btn-vermas">Ver más</a>
           </div>
         </div>
       </div>
 
       <div class="col">
         <div class="card h-100">
-          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers" />
+          <img src="./images/Costume_Party.jpg" class="card-img-top" alt="Costume_Party" />
           <div class="card-body">
             <h5 class="card-title">Título</h5>
             <p class="card-text"> Texto descriptivo. </p>
@@ -108,14 +107,14 @@
 
           <div class="card-footer">
             <small class="text-muted">Price $0000</small>
-            <button href="#" class="btn-vermas">Ver más</button>
+            <a href="#" class="btn-vermas">Ver más</a>
           </div>
         </div>
       </div>
 
       <div class="col">
         <div class="card h-100">
-          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road" />
+          <img src="./images/Food_Fair.jpg" class="card-img-top" alt="Food_Fair" />
           <div class="card-body">
             <h5 class="card-title">Título</h5>
             <p class="card-text"> Texto descriptivo. </p>
@@ -123,7 +122,7 @@
 
           <div class="card-footer">
             <small class="text-muted">Price $0000</small>
-            <button href="#" class="btn-vermas">Ver más</button>
+            <a href="#" class="btn-vermas">Ver más</a>
           </div>
         </div>
       </div>
