--- a/event.html
+++ b/event.html
@@ -54,28 +54,21 @@
     </div>
 
 <!-- Card Event -->
-<div class="card d-flex align-items-start bg-light mb-3" style="height: 100px;">
-  <div class="col">
-    <div class="card">
+<div class="row  d-flex card cardevent bg-light mb-3"> <!-- style="height: 100px;"> -->
+  <div class="col-md-6">
       <img class="card-img-top" src="http://www.tutorialesprogramacionya.com/imagenes/cuadro1.jpg">
-    </div> 
-
   </div>
 
-  <div class="col">
+  <div class="col-md-6">
     <div class="card-body">
-      <h4 class="card-title">Titulo de la tarjeta 1</h4>
+      <h4 class="card-title">Titulo del evento</h4>
       <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lectus sem,
         tempor vitae mattis malesuada, ornare sed erat. Pellentesque nulla dui, congue
         nec tortor sit amet, maximus mattis dui. </p>
-        <a href="#" class="btn btn-primary">Entrar</a>
       </div>
 
   </div>
 </div>
-
-
-
 
 <!-- Footer -->
 <footer class="text-center text-lg-start  fixed-bottom container"><!--  text-muted -->
@@ -113,15 +106,10 @@
   <!-- Section: Social media -->
 
 </footer>
-<!-- Footer -->
-
-
-
-
-
-
 
 </div> <!-- container -->
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
