--- a/stats.html
+++ b/stats.html
@@ -1,13 +1,194 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Amazing Events</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" rel="stylesheet">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="styles/index.css">
+</head>
+
+<body>
+
+  <div class="container">
+
+    <!-- navbar -->
+    <nav class="navbar bg-body-tertiary navbar-expand-lg ">
+      <div class="container-fluid ">
+
+        <a class="navbar-brand" href="#"> <img src="./images/LogoAmazingEvents.png" width="150" alt=""> </a>
+
+        <div class=" collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item"> <a class="nav-link" aria-current="page" href="index.html">Home</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="upcomingevents.html">Upcoming Events</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="pastevents.html">Past Events</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="contact.html">Contact</a> </li>
+            <li class="nav-item"> <a class="nav-link active disabled" href="#">Stats</a> </li>
+          </ul>
+        </div>
+
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+      </div>
+    </nav>
+
+    <!-- titulo y flechas -->
+    <div class="pages-arrows">
+      <a href="contact.html" id="left-arrow">
+        <h1>
+          < </h1>
+      </a>
+      <h1>Stats</h1>
+      <a href="" id="rigth-arrow" class="rigth-arrow-stats">
+        <h1> > </h1>
+      </a>
+    </div>
+
+<!-- Stats -->
+<div class="stats-table container">
+  <table class="table table-bordered">
+    <caption>
+        <h5>Events statistics</h5>
+    </caption>
+    <thead class="table-light">
+        <tr>
+            <th>Events with highest percentage of attendance</th>
+            <th>Events with lowest percentage of attendance</th>
+            <th>Events with larger capacity</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>  500 </td>
+            <td>  200 </td>
+            <td>  18 </td>
+        </tr>
+      </tbody>
+  </table>
+
+  <table class="table table-bordered">
+    <caption>
+        <h5>Upcoming events statistics by category</h5>
+    </caption>
+    <thead class="table-light">
+        <tr>
+            <th>Categories</th>
+            <th>Revenues</th>
+            <th>Percentage of attendance</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>  500 </td>
+            <td>  200 </td>
+            <td>  18 </td>
+        </tr>
+        <tr>
+          <td>  500 </td>
+          <td>  200 </td>
+          <td>  18 </td>
+      </tr>
+      <tr>
+        <td>  500 </td>
+        <td>  200 </td>
+        <td>  18 </td>
+    </tr>
+      </tbody>
+  </table>
+
+  <table class="table table-bordered">
+    <caption>
+        <h5>Past events statistic by category</h5>
+    </caption>
+    <thead class="table-light">
+      <tr>
+          <th>Categories</th>
+          <th>Revenues</th>
+          <th>Percentage of attendance</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <td>  500 </td>
+          <td>  200 </td>
+          <td>  18 </td>
+      </tr>
+      <tr>
+        <td>  500 </td>
+        <td>  200 </td>
+        <td>  18 </td>
+    </tr>
+    <tr>
+      <td>  500 </td>
+      <td>  200 </td>
+      <td>  18 </td>
+  </tr>
+  <tr>
+    <td>  500 </td>
+    <td>  200 </td>
+    <td>  18 </td>
+  </tr>
+  <tr>
+    <td>  500 </td>
+    <td>  200 </td>
+    <td>  18 </td>
+  </tr>
+    </tbody>
+  </table>
+</div>
+
+<!-- Footer -->
+<footer class="text-center text-lg-start  fixed-bottom container"><!--  text-muted -->
+  <!-- Section: Social media -->
+  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    <!-- Left -->
+    <div>
+      <a href="" class="me-4 link-secondary">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="" class="me-4 link-secondary">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="" class="me-4 link-secondary">
+        <i class="fab fa-google"></i>
+      </a>
+      <a href="" class="me-4 link-secondary">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="" class="me-4 link-secondary">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="" class="me-4 link-secondary">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+    <!-- Left -->
+    
+    <!-- Right -->
+    <div class="me-5 d-none d-lg-block">
+      <img src="./images/logoMH.jpg" width="25" alt="Mind Hub"> <span>Cohort: FE09-TT</span>
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
+
+</footer>
+
+</div> <!-- container -->
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
