--- a/event.html
+++ b/event.html
@@ -54,9 +54,9 @@
     </div>
 
 <!-- Card Event -->
-<div class="row  d-flex card cardevent bg-light mb-3"> <!-- style="height: 100px;"> -->
+<div class="row  d-flex card cardevent bg-light mb-3 p-2"> <!-- style="height: 100px;"> -->
   <div class="col-md-6">
-      <img class="card-img-top" src="http://www.tutorialesprogramacionya.com/imagenes/cuadro1.jpg">
+      <img src="./images/Cinema.jpg" class="card-img-top" alt="Cinema" />
   </div>
 
   <div class="col-md-6">
