--- a/pastevents.html
+++ b/pastevents.html
@@ -84,7 +84,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
       <div class="col">
         <div class="card h-100">
-          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" class="card-img-top" alt="Skyscrapers" />
+          <img src="./images/Marathon.jpg" class="card-img-top" alt="Marathon" />
 
           <div class="card-body">
             <h5 class="card-title">Título</h5>
@@ -100,7 +100,7 @@
 
       <div class="col">
         <div class="card h-100">
-          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers" />
+          <img src="./images/Museum_Tour.jpg" class="card-img-top" alt="Museum_Tour" />
           <div class="card-body">
             <h5 class="card-title">Título</h5>
             <p class="card-text"> Texto descriptivo. </p>
@@ -115,7 +115,7 @@
 
       <div class="col">
         <div class="card h-100">
-          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road" />
+          <img src="./images/Music_Concert.jpg" class="card-img-top" alt="Music_Concert" />
           <div class="card-body">
             <h5 class="card-title">Título</h5>
             <p class="card-text"> Texto descriptivo. </p>
@@ -130,48 +130,45 @@
 
     </div>
 
-<!-- Footer -->
-<footer class="text-center text-lg-start  fixed-bottom container"><!--  text-muted -->
-  <!-- Section: Social media -->
-  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-    <!-- Left -->
-    <div>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-google"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-github"></i>
-      </a>
-    </div>
-    <!-- Left -->
-    
-    <!-- Right -->
-    <div class="me-5 d-none d-lg-block">
-      <img src="./images/logoMH.jpg" width="25" alt="Mind Hub"> <span>Cohort: FE09-TT</span>
-    </div>
-    <!-- Right -->
-  </section>
-  <!-- Section: Social media -->
+    <!-- Footer -->
+    <footer class="text-center text-lg-start  fixed-bottom container"><!--  text-muted -->
+      <!-- Section: Social media -->
+      <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+        <!-- Left -->
+        <div>
+          <a href="" class="me-4 link-secondary">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="" class="me-4 link-secondary">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="" class="me-4 link-secondary">
+            <i class="fab fa-google"></i>
+          </a>
+          <a href="" class="me-4 link-secondary">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="" class="me-4 link-secondary">
+            <i class="fab fa-linkedin"></i>
+          </a>
+          <a href="" class="me-4 link-secondary">
+            <i class="fab fa-github"></i>
+          </a>
+        </div>
+        <!-- Left -->
+        
+        <!-- Right -->
+        <div class="me-5 d-none d-lg-block">
+          <img src="./images/logoMH.jpg" width="25" alt="Mind Hub"> <span>Cohort: FE09-TT</span>
+        </div>
+        <!-- Right -->
+      </section>
+      <!-- Section: Social media -->
 
-</footer>
-<!-- Footer -->
+    </footer>
+
 
   </div> <!-- container -->
-
-
-
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
