--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -84,7 +84,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
       <div class="col">
         <div class="card h-100">
-          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" class="card-img-top" alt="Skyscrapers" />
+          <img src="./images/Marathon.jpg" class="card-img-top" alt="Marathon" />
 
           <div class="card-body">
             <h5 class="card-title">Título</h5>
@@ -100,7 +100,7 @@
 
       <div class="col">
         <div class="card h-100">
-          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers" />
+          <img src="./images/Museum_Tour.jpg" class="card-img-top" alt="Museum_Tour" />
           <div class="card-body">
             <h5 class="card-title">Título</h5>
             <p class="card-text"> Texto descriptivo. </p>
@@ -115,7 +115,7 @@
 
       <div class="col">
         <div class="card h-100">
-          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road" />
+          <img src="./images/Music_Concert.jpg" class="card-img-top" alt="Music_Concert" />
           <div class="card-body">
             <h5 class="card-title">Título</h5>
             <p class="card-text"> Texto descriptivo. </p>
