--- a/event.html
+++ b/event.html
@@ -54,7 +54,7 @@
     </div>
 
 <!-- Card Event -->
-<div class="row  d-flex card cardevent bg-light mb-3 p-2"> <!-- style="height: 100px;"> -->
+<div class="row  d-flex card cardevent bg-light p-2"> <!-- style="height: 100px;"> -->
   <div class="col-md-6">
       <img src="./images/Cinema.jpg" class="card-img-top" alt="Cinema" />
   </div>
