--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -73,7 +73,7 @@
 
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <button class="btn btn-primary " type="submit">Search</button>
         </form>
 
       </div>
@@ -130,30 +130,16 @@
 
     </div>
 
-<!-- Footer -->
-<footer class="text-center text-lg-start  fixed-bottom container"><!--  text-muted -->
-  <!-- Section: Social media -->
-  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    <!-- Footer -->
+    <footer class="text-center text-lg-start  fixed-bottom container"><!--  text-muted -->
+      <!-- Section: Social media -->
+  <section class="d-flex justify-content-center justify-content-lg-between p-2">
     <!-- Left -->
     <div>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-google"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-github"></i>
-      </a>
+      <a class="btn btn-outline-light btn-floating " href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
+      <a class="btn btn-outline-light btn-floating " href="#!" role="button"><i class="fab fa-instagram"></i></a>
+      <a class="btn btn-outline-light btn-floating " href="#!" role="button"><i class="fab fa-whatsapp"></i></a>
+      
     </div>
     <!-- Left -->
     
@@ -165,8 +151,7 @@
   </section>
   <!-- Section: Social media -->
 
-</footer>
-<!-- Footer -->
+    </footer>
 
   </div> <!-- container -->
 
