--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 
     <!-- Cards -->
-    <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
+    <div class="row row-cols-1 row-cols-md-4 g-4 mt-5">
       <div class="col">
         <div class="card h-100">
           <img src="./images/Cinema.jpg" class="card-img-top" alt="Cinema" />
@@ -92,7 +92,7 @@
 
           <div class="card-footer">
             <small class="text-muted">Price $0000</small>
-            <a href="event.html" class="btn-vermas">Ver más</a>
+            <a  class="btn btn-primary" href="event.html" role="button">Ver más</a>
           </div>
         </div>
       </div>
@@ -107,7 +107,7 @@
 
           <div class="card-footer">
             <small class="text-muted">Price $0000</small>
-            <a href="#" class="btn-vermas">Ver más</a>
+            <a  class="btn btn-primary" href="event.html" role="button">Ver más</a>
           </div>
         </div>
       </div>
@@ -122,11 +122,25 @@
 
           <div class="card-footer">
             <small class="text-muted">Price $0000</small>
-            <a href="#" class="btn-vermas">Ver más</a>
+            <a  class="btn btn-primary" href="event.html" role="button">Ver más</a>
           </div>
         </div>
       </div>
 
+      <div class="col">
+        <div class="card h-100">
+          <img src="./images/Music_Concert.jpg" class="card-img-top" alt="Music_Concert" />
+          <div class="card-body">
+            <h5 class="card-title">Título</h5>
+            <p class="card-text"> Texto descriptivo. </p>
+          </div>
+
+          <div class="card-footer">
+            <small class="text-muted">Price $0000</small>
+            <a  class="btn btn-primary" href="event.html" role="button">Ver más</a>
+          </div>
+        </div>
+      </div>
     </div>
     
     <!-- Footer -->
