--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -81,11 +81,10 @@
     </nav>
 
     <!-- Cards -->
-    <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
+    <div class="row row-cols-1 row-cols-md-4 g-4 mt-5">
       <div class="col">
         <div class="card h-100">
-          <img src="./images/Marathon.jpg" class="card-img-top" alt="Marathon" />
-
+          <img src="./images/Cinema.jpg" class="card-img-top" alt="Cinema" />
           <div class="card-body">
             <h5 class="card-title">Título</h5>
             <p class="card-text"> Texto descriptivo. </p>
@@ -93,14 +92,14 @@
 
           <div class="card-footer">
             <small class="text-muted">Price $0000</small>
-            <button href="#" class="btn-vermas">Ver más</button>
+            <a  class="btn btn-primary" href="event.html" role="button">Ver más</a>
           </div>
         </div>
       </div>
 
       <div class="col">
         <div class="card h-100">
-          <img src="./images/Museum_Tour.jpg" class="card-img-top" alt="Museum_Tour" />
+          <img src="./images/Costume_Party.jpg" class="card-img-top" alt="Costume_Party" />
           <div class="card-body">
             <h5 class="card-title">Título</h5>
             <p class="card-text"> Texto descriptivo. </p>
@@ -108,7 +107,22 @@
 
           <div class="card-footer">
             <small class="text-muted">Price $0000</small>
-            <button href="#" class="btn-vermas">Ver más</button>
+            <a  class="btn btn-primary" href="event.html" role="button">Ver más</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card h-100">
+          <img src="./images/Food_Fair.jpg" class="card-img-top" alt="Food_Fair" />
+          <div class="card-body">
+            <h5 class="card-title">Título</h5>
+            <p class="card-text"> Texto descriptivo. </p>
+          </div>
+
+          <div class="card-footer">
+            <small class="text-muted">Price $0000</small>
+            <a  class="btn btn-primary" href="event.html" role="button">Ver más</a>
           </div>
         </div>
       </div>
@@ -123,11 +137,10 @@
 
           <div class="card-footer">
             <small class="text-muted">Price $0000</small>
-            <button href="#" class="btn-vermas">Ver más</button>
+            <a  class="btn btn-primary" href="event.html" role="button">Ver más</a>
           </div>
         </div>
       </div>
-
     </div>
 
     <!-- Footer -->
