--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles/index.css">
+
+  <link rel="icon" type="image/x-icon" href="/images/fvicoAE.png">
 </head>
 
 <body>
@@ -63,7 +65,6 @@
             <label> <input type="checkbox" name="searchfilter" value="c3"> Category3 &emsp;</label>
             <label> <input type="checkbox" name="searchfilter" value="c4"> Category4 &emsp;</label>
           </fieldset>
-
         </div>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSearch"
