--- a/index.html
+++ b/index.html
@@ -82,66 +82,23 @@
     </nav>
 
     <!-- Cards -->
-    <div class="row row-cols-1 row-cols-md-4 g-4 mt-5">
-      <div class="col">
-        <div class="card h-100">
-          <img src="./images/Cinema.jpg" class="card-img-top" alt="Cinema" />
-          <div class="card-body">
-            <h5 class="card-title">Título</h5>
-            <p class="card-text"> Texto descriptivo. </p>
-          </div>
+    <div class="row row-cols-1 row-cols-md-4 g-4 mt-5" id="row-cards">
+      <!-- <div class="col" id="rc-col">
+              <div class="card h-100" id="rc-card" > 
+                      <img src="./images/Cinema.jpg" class="card-img-top" id="card-img-top" alt="Cinema" />
+                      <div class="card-body" id="card-body">
+                        <h5 class="card-title" id="card-title">Título</h5>
+                        <p class="card-text"> Texto descriptivo. </p>
+                      </div>
 
-          <div class="card-footer">
-            <small class="text-muted">Price $0000</small>
-            <a  class="btn btn-primary" href="event.html" role="button">Ver más</a>
-          </div>
+                      <div class="card-footer" id="card-footer">
+                        <small class="text-muted">Price $0000</small>
+                        <a  class="btn btn-primary" href="event.html" role="button">Ver más</a>
+                      </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="col">
-        <div class="card h-100">
-          <img src="./images/Costume_Party.jpg" class="card-img-top" alt="Costume_Party" />
-          <div class="card-body">
-            <h5 class="card-title">Título</h5>
-            <p class="card-text"> Texto descriptivo. </p>
-          </div>
-
-          <div class="card-footer">
-            <small class="text-muted">Price $0000</small>
-            <a  class="btn btn-primary" href="event.html" role="button">Ver más</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="card h-100">
-          <img src="./images/Food_Fair.jpg" class="card-img-top" alt="Food_Fair" />
-          <div class="card-body">
-            <h5 class="card-title">Título</h5>
-            <p class="card-text"> Texto descriptivo. </p>
-          </div>
-
-          <div class="card-footer">
-            <small class="text-muted">Price $0000</small>
-            <a  class="btn btn-primary" href="event.html" role="button">Ver más</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="card h-100">
-          <img src="./images/Music_Concert.jpg" class="card-img-top" alt="Music_Concert" />
-          <div class="card-body">
-            <h5 class="card-title">Título</h5>
-            <p class="card-text"> Texto descriptivo. </p>
-          </div>
-
-          <div class="card-footer">
-            <small class="text-muted">Price $0000</small>
-            <a  class="btn btn-primary" href="event.html" role="button">Ver más</a>
-          </div>
-        </div>
-      </div>
+    
     </div>
     
     <!-- Footer -->
@@ -171,7 +128,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
-
+<script src="./js/data.js"></script>
+<script src="./js/index.js"></script>
 </body>
 
 
