--- a/pastevents.html
+++ b/pastevents.html
@@ -11,10 +11,10 @@
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles/index.css">
   <link rel="icon" type="image/x-icon" href="/images/fvicoAE.png">
+
 </head>
 
 <body>
-
   <div class="container">
 
     <!-- navbar -->
@@ -82,68 +82,10 @@
     </nav>
 
     <!-- Cards -->
-    <div class="row row-cols-1 row-cols-md-4 g-4 mt-5">
-      <div class="col">
-        <div class="card h-100">
-          <img src="./images/Cinema.jpg" class="card-img-top" alt="Cinema" />
-          <div class="card-body">
-            <h5 class="card-title">Título</h5>
-            <p class="card-text"> Texto descriptivo. </p>
-          </div>
-
-          <div class="card-footer">
-            <small class="text-muted">Price $0000</small>
-            <a  class="btn btn-primary" href="event.html" role="button">Ver más</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="card h-100">
-          <img src="./images/Costume_Party.jpg" class="card-img-top" alt="Costume_Party" />
-          <div class="card-body">
-            <h5 class="card-title">Título</h5>
-            <p class="card-text"> Texto descriptivo. </p>
-          </div>
-
-          <div class="card-footer">
-            <small class="text-muted">Price $0000</small>
-            <a  class="btn btn-primary" href="event.html" role="button">Ver más</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="card h-100">
-          <img src="./images/Food_Fair.jpg" class="card-img-top" alt="Food_Fair" />
-          <div class="card-body">
-            <h5 class="card-title">Título</h5>
-            <p class="card-text"> Texto descriptivo. </p>
-          </div>
-
-          <div class="card-footer">
-            <small class="text-muted">Price $0000</small>
-            <a  class="btn btn-primary" href="event.html" role="button">Ver más</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="card h-100">
-          <img src="./images/Music_Concert.jpg" class="card-img-top" alt="Music_Concert" />
-          <div class="card-body">
-            <h5 class="card-title">Título</h5>
-            <p class="card-text"> Texto descriptivo. </p>
-          </div>
-
-          <div class="card-footer">
-            <small class="text-muted">Price $0000</small>
-            <a  class="btn btn-primary" href="event.html" role="button">Ver más</a>
-          </div>
-        </div>
-      </div>
+    <div  class="row row-cols-1 row-cols-md-4 g-4 mt-5"  id="row-cards">
+      
     </div>
-
+    
     <!-- Footer -->
     <footer class="text-center text-lg-start  fixed-bottom container"><!--  text-muted -->
       <!-- Section: Social media -->
@@ -169,11 +111,20 @@
 
 
   </div> <!-- container -->
-
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
+  integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+  crossorigin="anonymous"></script>
+  
+  
+  <script src="./js/data.js"></script>
+  <!-- <script src="./js/pastevents.js"></script> -->
+  
+
+  <script src="eventos.js"></script>
+  <script>     
+    loadCard(3);
+  </script>
+
 </body>
 
 </html>
