home-upcoming-past dinamic

--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -117,8 +117,10 @@
     crossorigin="anonymous"></script>
     
     <script src="./js/data.js"></script>
-    <script src="./js/upcomingevents.js"></script>
-    
+    <script src="./js/events.js"></script>
+<!--     <script>  loadCard(2);  </script> -->
+<script>  loadCard.upcoming() ;  </script>
+
   </body>
   
 
