--- a/event.html
+++ b/event.html
@@ -16,7 +16,6 @@
 <body>
 
   <div class="container">
-
     <!-- navbar -->
     <nav class="navbar bg-body-tertiary navbar-expand-lg ">
       <div class="container-fluid ">
@@ -41,7 +40,6 @@
 
       </div>
     </nav>
-
     <!-- titulo y flechas -->
     <div class="pages-arrows">
       <a href="upcomingevents.html" id="left-arrow">
@@ -54,22 +52,22 @@
       </a>
     </div>
 
+
 <!-- Card Event -->
-<div class="row  d-flex card cardevent bg-light p-2"> <!-- style="height: 100px;"> -->
-  <div class="col-md-6">
+<div class="row  d-flex card cardevent bg-light p-2" id="event-card"> <!-- style="height: 100px;"> -->
+<!--   <div class="col-md-6">
       <img src="./images/Cinema.jpg" class="card-img-top" alt="Cinema" />
   </div>
 
   <div class="col-md-6">
     <div class="card-body">
       <h4 class="card-title">Titulo del evento</h4>
-      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lectus sem,
-        tempor vitae mattis malesuada, ornare sed erat. Pellentesque nulla dui, congue
-        nec tortor sit amet, maximus mattis dui. </p>
+      <p class="card-text">Lorem  </p>
       </div>
 
-  </div>
+  </div> -->
 </div>
+
 
     <!-- Footer -->
     <footer class="text-center text-lg-start  fixed-bottom container"><!--  text-muted -->
@@ -93,13 +91,20 @@
   <!-- Section: Social media -->
 
     </footer>
-
 </div> <!-- container -->
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
-</body>
+    <script src="./js/data.js"></script>
+    <script src="./js/events.js"></script>
+    <script src="./js/loadevent.js"></script>
+    <script>  loadCard(5);  </script>
+    <!-- <script>  
+     id=2
+      loadCard[id] ;  
+    </script> -->
+  </body>
 
 </html>
