--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
 <script src="./js/data.js"></script>
-<script src="./js/index.js"></script>
+<script src="./js/events.js"></script>
+<!-- <script>  loadCard(1);  </script> -->
+<script>   loadCard.default();  </script>
 </body>
 
 
