--- a/pastevents.html
+++ b/pastevents.html
@@ -115,15 +115,10 @@
   integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
   crossorigin="anonymous"></script>
   
-  
-  <script src="./js/data.js"></script>
-  <!-- <script src="./js/pastevents.js"></script> -->
-  
-
-  <script src="eventos.js"></script>
-  <script>     
-    loadCard(3);
-  </script>
+    <script src="./js/data.js"></script>
+    <script src="./js/events.js"></script>
+  <!-- <script>  loadCard(3);  </script> -->
+  <script>   loadCard.past();  </script>
 
 </body>
 
