comenzando con template

--- a/pastevents.html
+++ b/pastevents.html
@@ -87,7 +87,7 @@
     </div>
     
     <!-- Footer -->
-    <footer class="text-center text-lg-start  fixed-bottom container"><!--  text-muted -->
+    <footer class="text-center text-lg-start  fixed-bottom container">
       <!-- Section: Social media -->
   <section class="d-flex justify-content-center justify-content-lg-between p-2">
     <!-- Left -->
@@ -117,8 +117,8 @@
   
     <script src="./js/data.js"></script>
     <script src="./js/events.js"></script>
-  <!-- <script>  loadCard(3);  </script> -->
-  <script>   loadCard.past();  </script>
+
+    <script>   loadCard.past();  </script>
 
 </body>
 
