--- a/event.html
+++ b/event.html
@@ -54,18 +54,8 @@
 
 
 <!-- Card Event -->
-<div class="row  d-flex card cardevent bg-light p-2" id="event-card"> <!-- style="height: 100px;"> -->
-<!--   <div class="col-md-6">
-      <img src="./images/Cinema.jpg" class="card-img-top" alt="Cinema" />
-  </div>
+<div class="row  d-flex card cardevent bg-light p-2" id="event-card">
 
-  <div class="col-md-6">
-    <div class="card-body">
-      <h4 class="card-title">Titulo del evento</h4>
-      <p class="card-text">Lorem  </p>
-      </div>
-
-  </div> -->
 </div>
 
 
@@ -97,14 +87,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
-    <script src="./js/data.js"></script>
-    <script src="./js/events.js"></script>
-    <script src="./js/loadevent.js"></script>
-    <script>  loadCard(5);  </script>
-    <!-- <script>  
-     id=2
-      loadCard[id] ;  
-    </script> -->
+    
+        <script src="./js/data.js"></script>
+        <script src="./js/loadevent.js"></script>
   </body>
 
 </html>
