task2 terminado-entregado

--- a/index.html
+++ b/index.html
@@ -82,12 +82,14 @@
     </nav>
 
     <!-- Cards -->
-    <div class="row row-cols-1 row-cols-md-4 g-4 mt-5" id="row-cards" >
+    <div class="row row-cols-1 row-cols-md-4 g-3 mt-5" id="row-cards" >
+
+    </div>
 
     </div>
     
     <!-- Footer -->
-    <footer class="text-center text-lg-start  fixed-bottom container"><!--  text-muted -->
+    <footer class="text-center text-lg-start container">
       <!-- Section: Social media -->
   <section class="d-flex justify-content-center justify-content-lg-between p-2">
     <!-- Left -->
@@ -116,8 +118,8 @@
 
 <script src="./js/data.js"></script>
 <script src="./js/events.js"></script>
+<script>   loadCard.all();  </script>
 
-<script>   loadCard.default();  </script>
 
 </body>
 
