--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -81,13 +81,13 @@
     </nav>
 
     <!-- Cards -->
-    <div class="row row-cols-1 row-cols-md-4 g-4 mt-5"  id="row-cards">
+    <div class="row row-cols-1 row-cols-md-4 g-3 mt-5"  id="row-cards">
     </div>
     
   </div>
   
   <!-- Footer -->
-  <footer class="text-center text-lg-start  fixed-bottom container"><!--  text-muted -->
+  <footer class="text-center text-lg-start container"><!--  text-muted -->
     <!-- Section: Social media -->
     <section class="d-flex justify-content-center justify-content-lg-between p-2">
       <!-- Left -->
