--- a/pastevents.html
+++ b/pastevents.html
@@ -87,7 +87,7 @@
     </div>
     
     <!-- Footer -->
-    <footer class="text-center text-lg-start  fixed-bottom container">
+    <footer class="text-center text-lg-start  container">
       <!-- Section: Social media -->
   <section class="d-flex justify-content-center justify-content-lg-between p-2">
     <!-- Left -->
