practicando map-filter

--- a/index.html
+++ b/index.html
@@ -117,8 +117,11 @@
     crossorigin="anonymous"></script>
 
 <script src="./js/data.js"></script>
+<script src="./js/cardTemplate.js"></script>
 <script src="./js/events.js"></script>
 <script>   loadCard.all();  </script>
+
+
 
 
 </body>
