--- a/pastevents.html
+++ b/pastevents.html
@@ -116,6 +116,7 @@
   crossorigin="anonymous"></script>
   
     <script src="./js/data.js"></script>
+    <script src="./js/cardTemplate.js"></script>
     <script src="./js/events.js"></script>
 
     <script>   loadCard.past();  </script>
