--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -117,10 +117,13 @@
     crossorigin="anonymous"></script>
     
     <script src="./js/data.js"></script>
-    <script src="./js/events.js"></script>
+    <script src="./js/cardTemplate.js"></script>
+<!--    <script src="./js/events.js"></script>
 
-<script>  loadCard.upcoming() ;  </script>
+ <script>  loadCard.upcoming() ;  </script> -->
 
+
+<script src="./js/categories.js"></script>
   </body>
   
 
