dinamic: home-upc-past y detalle de evento

--- a/event.html
+++ b/event.html
@@ -89,6 +89,7 @@
     crossorigin="anonymous"></script>
 
         <script src="./js/data.js"></script>
+        <script src="./js/cardTemplateEvent.js"></script>
         <script src="./js/loadevent.js"></script>
   </body>
 
