--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -118,12 +118,10 @@
     
     <script src="./js/data.js"></script>
     <script src="./js/cardTemplate.js"></script>
-<!--    <script src="./js/events.js"></script>
+    <script src="./js/events.js"></script>
 
- <script>  loadCard.upcoming() ;  </script> -->
+ <script>  loadCard.upcoming() ;  </script> 
 
-
-<script src="./js/categories.js"></script>
   </body>
   
 
