--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
       <div class="container-fluid">
         <div class=" collapse navbar-collapse" id="navbarSearch">
           <fieldset class="navbar-nav me-auto mb-2 mb-lg-0">
-            <input type="checkbox" class="checks" name="categories" id="food" value="food"> <label> Food Fair &emsp;</label>
-            <input type="checkbox" class="checks" name="categories" id="museum" value="museum"><label> Museum &emsp;</label>
-            <input type="checkbox" class="checks" name="categories" id="party" value="party"> <label> Costume Party &emsp;</label>
-            <input type="checkbox" class="checks" name="categories" id="music" value="music"> <label> Music Concert &emsp;</label>
-            <input type="checkbox" class="checks" name="categories" id="race" value="race"> <label> Race &emsp;</label>
-            <input type="checkbox" class="checks" name="categories" id="book" value="book"> <label> Book Exchange &emsp;</label>
-            <input type="checkbox" class="checks" name="categories" id="cinema" value="cinema"> <label> Cinema &emsp;</label>
+            <input type="checkbox" class="checks" name="categories" id="food" value="Food Fair"> <label> Food Fair &emsp;</label>
+            <input type="checkbox" class="checks" name="categories" id="museum" value="Museum"><label> Museum &emsp;</label>
+            <input type="checkbox" class="checks" name="categories" id="party" value="Costume Party"> <label> Costume Party &emsp;</label>
+            <input type="checkbox" class="checks" name="categories" id="music" value="Music Concert"> <label> Music Concert &emsp;</label>
+            <input type="checkbox" class="checks" name="categories" id="race" value="Race"> <label> Race &emsp;</label>
+            <input type="checkbox" class="checks" name="categories" id="book" value="Book Exchange"> <label> Book Exchange &emsp;</label>
+            <input type="checkbox" class="checks" name="categories" id="cinema" value="Cinema"> <label> Cinema &emsp;</label>
           </fieldset>
         </div>
 
@@ -122,7 +122,8 @@
 <script src="./js/data.js"></script>
 <script src="./js/cardTemplate.js"></script>
 <script src="./js/events.js"></script>
-<script>   loadCard.all();  </script>
+<!-- <script>   loadCard.all();  </script> -->
+<script>   all();  </script>
 
 <script src="./js/filters_search.js"></script>
 
