indexfilter funciona. seguir con upc-past

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <script src="./js/cardTemplate.js"></script>
 <script src="./js/events.js"></script>
 <!-- <script>   loadCard.all();  </script> -->
-<script>   all();  </script>
+<script>   index();  </script>
 
 <script src="./js/filters_search.js"></script>
 
