estilizando footer de event details

--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -58,10 +58,13 @@
       <div class="container-fluid">
         <div class=" collapse navbar-collapse" id="navbarSearch">
           <fieldset class="navbar-nav me-auto mb-2 mb-lg-0">
-            <label> <input type="checkbox" name="searchfilter" value="c1"> Category1 &emsp;</label>
-            <label> <input type="checkbox" name="searchfilter" value="c2"> Category2 &emsp;</label>
-            <label> <input type="checkbox" name="searchfilter" value="c3"> Category3 &emsp;</label>
-            <label> <input type="checkbox" name="searchfilter" value="c4"> Category4 &emsp;</label>
+            <input type="checkbox" class="checks" name="categories" id="food" value="Food Fair"> <label> Food Fair &emsp;</label>
+            <input type="checkbox" class="checks" name="categories" id="museum" value="Museum"><label> Museum &emsp;</label>
+            <input type="checkbox" class="checks" name="categories" id="party" value="Costume Party"> <label> Costume Party &emsp;</label>
+            <input type="checkbox" class="checks" name="categories" id="music" value="Music Concert"> <label> Music Concert &emsp;</label>
+            <input type="checkbox" class="checks" name="categories" id="race" value="Race"> <label> Race &emsp;</label>
+            <input type="checkbox" class="checks" name="categories" id="book" value="Book Exchange"> <label> Book Exchange &emsp;</label>
+            <input type="checkbox" class="checks" name="categories" id="cinema" value="Cinema"> <label> Cinema &emsp;</label>
           </fieldset>
 
         </div>
@@ -72,8 +75,8 @@
         </button>
 
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-primary " type="submit">Search</button>
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"  name="search" id="search">
+          <button class="btn btn-primary " type="submit" id="upCSearchBtn">Search</button>
         </form>
 
       </div>
@@ -119,8 +122,10 @@
     <script src="./js/data.js"></script>
     <script src="./js/cardTemplate.js"></script>
     <script src="./js/events.js"></script>
-
- <script>  loadCard.upcoming() ;  </script> 
+    
+    <script>  upcoming() </script>
+    
+    <script src="./js/filters_search.js"></script>
 
   </body>
   
