--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search" id="search">
-          <button class="btn btn-primary" type="submit" id="searchButton">Search</button>
+          <button class="btn btn-primary" type="submit" id="searchBtn">Search</button>
         </form>
 
       </div>
