falta form de contacto

--- a/event.html
+++ b/event.html
@@ -54,9 +54,7 @@
 
 
 <!-- Card Event -->
-<div class="row  d-flex card cardevent bg-light p-2" id="event-card">
-
-</div>
+<div class="row  card cardevent bg-light p-2" id="event-card">  </div>
 
 
     <!-- Footer -->
@@ -88,9 +86,11 @@
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
 
-        <script src="./js/data.js"></script>
-        <script src="./js/cardTemplateEvent.js"></script>
-        <script src="./js/loadevent.js"></script>
+    <script src="./js/data.js"></script>
+
+    <script src="./js/template_detailedcard.js"></script>
+
+    
   </body>
 
 </html>
