--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="icon" type="image/x-icon" href="/images/fvicoAE.png">
 </head>
 
-<body>
+<body id="index">
 
   <div class="container">
 
@@ -56,40 +56,28 @@
     </div>
 
     <!-- barra de busqueda -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg" >
       <div class="container-fluid">
         <div class=" collapse navbar-collapse" id="navbarSearch">
-          <fieldset class="navbar-nav me-auto mb-2 mb-lg-0">
-            <input type="checkbox" class="checks" name="categories" id="food" value="Food Fair"> <label> Food Fair &emsp;</label>
-            <input type="checkbox" class="checks" name="categories" id="museum" value="Museum"><label> Museum &emsp;</label>
-            <input type="checkbox" class="checks" name="categories" id="party" value="Costume Party"> <label> Costume Party &emsp;</label>
-            <input type="checkbox" class="checks" name="categories" id="music" value="Music Concert"> <label> Music Concert &emsp;</label>
-            <input type="checkbox" class="checks" name="categories" id="race" value="Race"> <label> Race &emsp;</label>
-            <input type="checkbox" class="checks" name="categories" id="book" value="Book Exchange"> <label> Book Exchange &emsp;</label>
-            <input type="checkbox" class="checks" name="categories" id="cinema" value="Cinema"> <label> Cinema &emsp;</label>
-          </fieldset>
-        </div>
+            <fieldset class="navbar-nav me-auto mb-2 mb-lg-0" id="checks-and-search">
+                  <!-- <script src="./js/template_checks_search.js"></script> -->
+            </fieldset>
+          </div>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSearch"
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSearch"
           aria-controls="navbarSearch" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search" id="search">
-          <button class="btn btn-primary" type="submit" id="searchBtn">Search</button>
+          <form class="d-flex" role="search">
+            <input onkeyup="captureData()" name="texto" id="id_search" class="form-control me-2" type="search" placeholder="Search">
         </form>
 
       </div>
-
     </nav>
 
     <!-- Cards -->
-    <div class="row row-cols-1 row-cols-md-4 g-3 mt-5" id="row-cards" >
-
-    </div>
-
-  </div>
+    <div class="row row-cols-1 row-cols-md-4 g-3 mt-5" id="row-cards" >    </div>
     
     <!-- Footer -->
     <footer class="text-center text-lg-start container">
@@ -119,15 +107,13 @@
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
 
-<script src="./js/data.js"></script>
-<script src="./js/cardTemplate.js"></script>
-<script src="./js/events.js"></script>
-<!-- <script>   loadCard.all();  </script> -->
-<script>   index();  </script>
+    <script src="./js/data.js"></script>
 
-<script src="./js/filters_search.js"></script>
+    <script src="./js/template_checks_search.js"></script>
+    <script src="./js/template_gridcards.js"></script>
 
-
+    <script src="./js/filters_search.js"></script>
+    
 
 </body>
 
