--- a/contact.html
+++ b/contact.html
@@ -60,24 +60,24 @@
   <form>
     <!-- Name input -->
     <div class="form-outline mb-4">
-      <input type="text" id="form4Example1" class="form-control" />
+      <input type="text" id="form4Example1" class="form-control" required/>
       <label class="form-label" for="form4Example1">Name</label>
     </div>
 
     <!-- Email input -->
     <div class="form-outline mb-4">
-      <input type="email" id="form4Example2" class="form-control" />
+      <input type="email" id="form4Example2" class="form-control" required/>
       <label class="form-label" for="form4Example2">Email address</label>
     </div>
 
     <!-- Message input -->
     <div class="form-outline mb-4">
-      <textarea class="form-control" id="form4Example3" rows="4"></textarea>
+      <textarea class="form-control" id="form4Example3" rows="4" required> </textarea>
       <label class="form-label" for="form4Example3">Message</label>
     </div>
 
     <!-- Submit button -->
-    <button type="submit" class="btn btn-primary btn-block mb-4">Submit</button>
+    <button type="button" class="btn btn-primary btn-block mb-4" id="btn-submit" onclick="obtenerDatos()">Submit</button>
   </form>
 </section>
 
@@ -114,6 +114,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./js/contact.js"></script>
 </body>
 
 </html>
