--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,8 @@
         <h1> > </h1>
       </a>
     </div>
-
-<form class="row g-5 p-5 m-5 needs-validation" novalidate>
+<section class="section-contact-form container">
+<form class="row g-5 p-2 m-5 needs-validation" novalidate>
     <div class="col-md-6">
       <label for="validationCustom01" class="form-label">Name</label>
       <input type="text" class="form-control" id="validationCustom01"  required>
@@ -77,7 +77,7 @@
       <button class="btn btn-primary" type="submit">Send</button>
     </div>
   </form>
-
+</section>
 
     <!-- Footer -->
     <footer class="text-center text-lg-start  fixed-bottom container">
