contact y hover cards

--- a/pastevents.html
+++ b/pastevents.html
@@ -11,7 +11,8 @@
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles/index.css">
   <link rel="stylesheet" type="text/css" href="styles/burger.css">
-  
+  <link rel="stylesheet" type="text/css" href="styles/arrows.css">
+
   <link rel="icon" type="image/x-icon" href="/images/fvicoAE.png">
 
 </head>
@@ -46,14 +47,9 @@
 
     <!-- titulo y flechas -->
     <div class="pages-arrows">
-      <a href="upcomingevents.html" id="left-arrow">
-        <h1>
-          < </h1>
-      </a>
-      <h1>Past Events</h1>
-      <a href="contact.html" id="rigth-arrow">
-        <h1> > </h1>
-      </a>
+      <a href="upcomingevents.html" id="left-arrow"> <div class="arrow">   <span></span>    </div>  </a>
+        <h1>Past Events</h1>
+      <a href="contact.html" id="rigth-arrow"> <div class="arrow">   <span></span>    </div>  </a>
     </div>
 
     <!-- barra de busqueda -->
