--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles/index.css">
+  <link rel="stylesheet" type="text/css" href="styles/arrows.css">
   <link rel="icon" type="image/x-icon" href="/images/fvicoAE.png">
 </head>
 
@@ -42,19 +43,18 @@
       </div>
     </nav>
 
+
     <!-- titulo y flechas -->
     <div class="pages-arrows">
-      <a href="pastevents.html" id="left-arrow">
-        <h1>
-          < </h1>
-      </a>
-      <h1>Contact</h1>
-      <a href="stats.html" id="rigth-arrow">
-        <h1> > </h1>
-      </a>
+      <a href="pastevents.html" id="left-arrow"> <div class="arrow">   <span></span>    </div>  </a>
+        <h1>Contact</h1>
+      <a href="stats.html" id="rigth-arrow"> <div class="arrow">   <span></span>    </div>  </a>
     </div>
+
+
+
 <section class="section-contact-form container">
-<form class="row g-5 p-2 m-5 needs-validation" novalidate>
+  <form class="row g-5 p-2 m-5 needs-validation" novalidate>
     <div class="col-md-6">
       <label for="validationCustom01" class="form-label">Name</label>
       <input type="text" class="form-control" id="validationCustom01"  required>
