--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles/index.css">
   <link rel="stylesheet" type="text/css" href="styles/burger.css">
+  <link rel="stylesheet" type="text/css" href="styles/arrows.css">
+  
 
   <link rel="icon" type="image/x-icon" href="/images/fvicoAE.png">
 </head>
@@ -46,14 +48,9 @@
 
     <!-- titulo y flechas -->
     <div class="pages-arrows">
-      <a href="" id="left-arrow" class="left-arrow-index">
-        <h1>
-          < </h1>
-      </a>
-      <h1>HOME</h1>
-      <a href="upcomingevents.html" id="rigth-arrow">
-        <h1> > </h1>
-      </a>
+      <a href="" id="left-arrow"> <div class="left-arrow-index">   <span></span>    </div>  </a>
+        <h1>Home</h1>
+      <a href="upcomingevents.html" id="rigth-arrow"> <div class="arrow">   <span></span>    </div>  </a>
     </div>
 
     <!-- barra de busqueda -->
