--- a/stats.html
+++ b/stats.html
@@ -10,6 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles/index.css">
+  <link rel="stylesheet" type="text/css" href="styles/arrows.css">
   <link rel="icon" type="image/x-icon" href="/images/fvicoAE.png">
 </head>
 
@@ -44,14 +45,9 @@
 
     <!-- titulo y flechas -->
     <div class="pages-arrows">
-      <a href="contact.html" id="left-arrow">
-        <h1>
-          < </h1>
-      </a>
-      <h1>Stats</h1>
-      <a href="" id="rigth-arrow" class="rigth-arrow-stats">
-        <h1> > </h1>
-      </a>
+      <a href="contact.html" id="left-arrow"> <div class="arrow">   <span></span>    </div>  </a>
+        <h1>Stats</h1>
+      <a href="" id="rigth-arrow"> <div class="rigth-arrow-stats">   <span></span>    </div>  </a>
     </div>
 
     <!-- Stats -->
