--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -10,6 +10,7 @@
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles/index.css">
   <link rel="stylesheet" type="text/css" href="styles/burger.css">
+  <link rel="stylesheet" type="text/css" href="styles/arrows.css">
 
   <link rel="icon" type="image/x-icon" href="/images/fvicoAE.png">
 </head>
@@ -45,14 +46,12 @@
 
     <!-- titulo y flechas -->
     <div class="pages-arrows">
-      <a href="index.html" id="left-arrow">
-        <h1>
-          < </h1>
-      </a>
+      <a href="index.html" id="left-arrow"> <div class="arrow">   <span></span>    </div>  </a>
+ 
       <h1>Upcoming Events</h1>
-      <a href="pastevents.html" id="rigth-arrow">
-        <h1> > </h1>
-      </a>
+ 
+      <a href="pastevents.html" id="rigth-arrow"> <div class="arrow">   <span></span>    </div>  </a>
+
     </div>
 
     <!-- barra de busqueda -->
