correccion contact form en ingles

--- a/contact.html
+++ b/contact.html
@@ -58,19 +58,19 @@
     <div class="col-md-6">
       <label for="validationCustom01" class="form-label">Name</label>
       <input type="text" class="form-control" id="validationCustom01"  required>
-      <div class="invalid-feedback">Por favor, ingrese su nombre.</div>
+      <div class="invalid-feedback">Please, enter your name.</div>
     </div>
 
     <div class="col-md-6">
       <label for="validationCustom02" class="form-label">E-mail</label>
       <input type="email" class="form-control" id="validationCustom02" aria-describedby="inputGroupPrepend" required>
-      <div class="invalid-feedback">Por favor, ingrese un e-mail válido.</div>
+      <div class="invalid-feedback">Please, enter a valid e-mail.</div>
     </div>
 
     <div class="col-md-12">
       <label for="validationCustom03" class="form-label">Message</label>
       <textarea id="validationCustom03" rows="4" class="form-control" required></textarea>
-      <div class="invalid-feedback"> Por favor, escriba un mensaje. </div>
+      <div class="invalid-feedback"> Please, write a mensage. </div>
     </div>
     
     <div class="col-12">
