API conectada.seguir con checks y search

--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -120,12 +120,14 @@
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./js/data.js"></script>
 
+    <!-- <script src="./js/data.js"></script> -->
+    <script src="./js/APIconect.js"></script>
+    
     <script src="./js/template_checks_search.js"></script>
     <script src="./js/template_gridcards.js"></script>
     <script src="./js/filters_search.js"></script>
-
+    
 
   </body>
   
