task4-terminado-tabla de estadisticas

--- a/stats.html
+++ b/stats.html
@@ -99,32 +99,8 @@
               <th>Percentage of attendance</th>
           </tr>
       </thead>
-      <tbody>
-          <tr>
-              <td>  loading... </td>
-              <td>  loading... </td>
-              <td>  loading... </td>
-          </tr>
-          <tr>
-            <td>  loading... </td>
-            <td>  loading... </td>
-            <td>  loading... </td>
-        </tr>
-        <tr>
-          <td>  loading... </td>
-          <td>  loading... </td>
-          <td>  loading... </td>
-      </tr>
-      <tr>
-        <td>  loading... </td>
-        <td>  loading... </td>
-        <td>  loading... </td>
-      </tr>
-      <tr>
-        <td>  loading... </td>
-        <td>  loading... </td>
-        <td>  loading... </td>
-      </tr>
+      <tbody id="pastStat">
+          
         </tbody>
       </table>
     </div>
